	* Fixed bug #11388: MSIE 8.0 Elementbrowser layout broken (Thanks to Georg Kuehnberger)
	* Fixed bug #11387: MSIE 8.0 module file upload tab problem (Thanks to Georg Kuehnberger)
	* Fixed bug #6110: Description Field in cat_edit (Thanks to Tobi)
	* Fixed bug #7654: Category sorting by title, not by "sorting" (Thanks to Michael Ablass)
	
2009-08-20  Michiel Roos <michiel@netcreators.com>

	* #11743: DAM doesn't respekt skin images (Thanks to Georg Ringer)
	* #11750: Title tag of elements in page module is unreadable (Thanks to Georg Ringer)

2009-07-03  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bug #10817: Deleting files does not work for regular backend users

2009-07-21  Michiel Roos <michiel@netcreators.com>

	* #10194: Cannot confirm "delete file" operation
	* #11070: modfunc_list_thumbs: rendering on "no files found" 
	 
2009-07-14  Dan Osipov  <dosipov@phillyburbs.com>

	* #10556: Flexible media types

2009-07-04  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #10817: Upload doesn't work for admins under 4.3

2009-05-20  Michiel Roos <michiel@netcreators.com>

	* #10399: Media > List does not display records with language "All" (Thanks to Francois Suter)

2009-05-19  Michiel Roos <michiel@netcreators.com>

	* #10555: SQL error in MM selection (Thanks to Dan Osipov)

2009-05-14  Michiel Roos <michiel@netcreators.com>

	* #10243: Media tag: ATagParams can't wrap dam fields (Thanks to Olivier Shopfer)

2009-04-01  Dan Osipov <dosipov@phillyburbs.com>

	* #10350: Form problems using MSIE (Thanks to Michael Stucki)
	
2009-02-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #10293: Better link title handling in htmlArea RTE

2009-02-09  Michiel Roos <michiel@netcreators.com>

	* #10077 Add Icons to page:module TCEform

2009-02-08  Michael Stucki  <michael@typo3.org>

	* #10347: Categories valid for "All" languages are not fetched by category tree selector (Thanks to Francois Suter)

2009-01-31  Dan Osipov <dosipov@phillyburbs.com>
