@@ -4,6 +4,7 @@
 	* Fixed bug #11387: MSIE 8.0 module file upload tab problem (Thanks to Georg Kuehnberger)
 	* Fixed bug #6110: Description Field in cat_edit (Thanks to Tobi)
 	* Fixed bug #7654: Category sorting by title, not by "sorting" (Thanks to Michael Ablass)
+	* Fixed bug #11854: wrong syntax in ext_tables.sql (Thanks to Guiso Kegel)
 	
 2009-08-20  Michiel Roos <michiel@netcreators.com>
 
